{
    "name": "InputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "dcd39837-3c0e-43b4-b429-d8f06ee3ab0d",
            "actions": [
                {
                    "name": "WASD",
                    "type": "PassThrough",
                    "id": "d6c687b1-1a0c-4bac-9994-fa726be0c55d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "727b0062-0047-46d6-acaf-b637fdae6a16",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "c68efc83-97d8-4766-a972-c51697b7fa50",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a6a8397c-eede-42f4-abf8-a3478fb6a62e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "81ab6c2c-f1db-43aa-9af5-e20daabd5317",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "decce66b-c0d7-4aae-a7eb-7a4f3382f01f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "830b813f-b0cf-45d5-9335-4380d04fb213",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ffee80cc-8218-4a55-b881-b4c6457c36d0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "aaedcf55-1fb2-470e-b828-d1256ffaa577",
            "actions": [
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "278ad30c-2331-49cd-9030-b028b84f4fe9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainAction",
                    "type": "Button",
                    "id": "25452b8a-d9a1-4c9a-b004-de0973245276",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAction",
                    "type": "Button",
                    "id": "db2b09f3-4c8b-4872-9d81-1944a3f959eb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelAction",
                    "type": "Button",
                    "id": "1d2f6b73-491d-4a9b-9c2d-740705644f90",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootAction",
                    "type": "Button",
                    "id": "cc6e71df-9f2f-4930-8f61-a2a87ee0ecde",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TargetAction",
                    "type": "Button",
                    "id": "1aad25a9-a796-4917-b690-cdd46a790535",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7130d916-c013-4b36-98ae-64186ac435cf",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4893b00-6499-4236-bcd2-85499cee2bf4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bb7bd38-8fca-4285-badd-16a2a27f0809",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3389621-289b-4d20-8903-5439d84eda03",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "281a93dd-6564-40f8-8a7b-c3a72315c57d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85cc4143-6605-46f2-a4c4-ac2f0416da8f",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TargetAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI_Selection",
            "id": "4e7f2e25-27fb-4ea6-9419-7bcfc6004e5a",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "a800cef0-c88a-4852-bab1-8b2024a75ff8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b425085-50f5-4e9d-9355-6e32236adc9e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}